# newsstack

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/newsstack/: __main__.py  config.py  feeds.default.yaml  feeds_loader.py  server.py
src/newsstack/db/: models.py  queries.py  sqlite.py
src/newsstack/ingestion/: dedup.py  gdelt.py  normalizer.py  rss.py
src/newsstack/processing/: clustering.py  embeddings.py  ner.py  summarizer.py
src/newsstack/scheduling/: scheduler.py
src/newsstack/tools/: briefing.py  headlines.py  region.py  search.py  trending.py
src/newsstack/vectors/: qdrant.py
tests/: conftest.py  test_db.py  test_dedup.py  test_embeddings.py  test_feeds_loader.py  test_gdelt.py  test_normalizer.py
