[project]
name = "newsstack"
version = "0.1.0"
description = "MCP server for news intelligence — aggregation, dedup, clustering, and semantic search"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3,<4",
    "feedparser>=6.0.12",
    "gliner>=0.2.25",
    "hdbscan>=0.8.41",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.0",
    "scikit-learn>=1.8.0",
    "simhash>=2.1.2",
]

[project.scripts]
newsstack = "newsstack.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsstack"]

[tool.uv.sources]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
